# BeamSolver

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
_test/: beamsolver_test.py  sympy_edo.py  test.py  test_apoio.py  test_beam.py  test_deslocament.py  test_engastada.py  test_import.py  test_labaki.py  test_moment.py
beamsolver/: __init__.py  beam.py  version.py
docs/: api.md  index.md  tutorial.md
examples/: ex_01.py  ex_02.py  ex_03.py  ex_04.py  ex_05.py  ex_06.py  ex_07.py  ex_08.py  ex_09.py  stress.py
