#!/usr/bin/env python
# ==========================================================================#
#  This Python file is part of BeamSolver project                          #
#                                                                          #
#  The code is written by A. V. G. Campos                                  #
#                                                                          #
#  A github repository, with the most up to date version of the code,      #
#  can be found here:                                                      #
#     https://github.com/avgcampos/BeamSolver                              #
#                                                                          #
#  The code is open source and intended for educational and scientific     #
#  purposes only. If you use myfempy in your research, the developers      #
#  would be grateful if you could cite this.                               #
#                                                                          #
#  Disclaimer:                                                             #
#  The authors reserve all rights but do not guarantee that the code is    #
#  free from errors. Furthermore, the authors shall not be liable in any   #
#  event caused by the use of the program.                                 #
#==========================================================================#

#==========================================================================#
#
#             ____                        _____       _                
#            |  _ \                      / ____|     | |               
#            | |_) | ___  __ _ _ __ ___ | (___   ___ | |_   _____ _ __ 
#            |  _ < / _ \/ _` | '_ ` _ \ \___ \ / _ \| \ \ / / _ \ '__|
#            | |_) |  __/ (_| | | | | | |____) | (_) | |\ V /  __/ |   
#            |____/ \___|\__,_|_| |_| |_|_____/ \___/|_| \_/ \___|_|   
#                                                                    
#                                                           
#~~~              BeamSolver -- Symbolic Solver to Elastic Beam          ~~~
#~~~                     COMPUTATIONAL ANALYSIS PROGRAM                  ~~~
#~~~                    PROGRAMA DE ANÃLISE COMPUTACIONAL                ~~~
#~~~             Copyright (C) 2022 Antonio Vinicius Garcia Campos       ~~~
#==========================================================================#
#                           BeamSolver install script
#
#                 Install beamsolver through `python install .`,
#                 or visit the github page to more information

# SETUP SYSTEM
[project]
name = "beamsolver"
version = "0.1.0"
description = "Symbolic Solver to Elastic Beam"
authors = [
    {name = "Antonio Campos", email = "antviniciuscampos@gmail.com"},
]
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">3.8"
dependencies = [
	"numpy",
	"sympy",
	"matplotlib",
	"art",
	"colorama",
]
keywords = ["Engineering","SoLids", "Mechanics", "Python Package", "Sympy"]

classifiers = [
  "Development Status :: 1 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "Topic :: Scientific/Engineering :: Physics",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOSX",
]

[project.urls]
Homepage = "https://github.com/avgcampos/BeamSolver"
Documentation = "https://myfempy.readthedocs.io/"
Repository = "https://github.com/avgcampos/BeamSolver"